# mbld-ranks

./: .gitignore  GitVersion.yml  LICENSE  Makefile  README.md  docker-compose.yml
analysis/: analysis.py  multi.sql  plotexponents.py  skill.py
api/: Dockerfile  api.py  controller.py  data.py  dbqueries.py  pyproject.toml  requirements.txt  schema.py  server.py
etl/: Dockerfile  extract_and_load.py  pyproject.toml  requirements.txt  run.py
web/: .dockerignore  Dockerfile  analytics.sh  bun.lockb  nginx.conf  package-lock.json  package.json
web/src/: App.tsx  index.d.ts  index.html  index.tsx  routes.tsx  styles.less  variables.less
web/src/assets/: equation.tsx
web/src/components/: about.less  about.tsx  alert-message.less  alert-message.tsx  competition-details.less  competition-details.tsx  competition-link.tsx  competition-results-table.tsx  country-with-flag.tsx  flag-icon.less  flag-icon.tsx  footer.less  footer.tsx  formatted-mean.less  formatted-mean.tsx  formatted-result.tsx  mean-type-selector.less  mean-type-selector.tsx  navbar.less  navbar.tsx  person-bests-table.less  person-bests-table.tsx  person-details.less  person-details.tsx  person-link.tsx  person-ranks-table.less  person-ranks-table.tsx  person-results-table.tsx  rank-movement-tag.less  rank-movement-tag.tsx  rankings-table.tsx  record-tag.less  record-tag.tsx  records-table.tsx  results-table.less  tag-legend.tsx
web/src/contexts/: competition-context.tsx  person-context.tsx  rankings-context.tsx  records-context.tsx
web/src/hooks/: use-competition-details.tsx
(+16 files in other folders)
